--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -1,4 +1,4 @@
-name: Update README
+name: Update Activity
 
 on:
   schedule:
@@ -8,7 +8,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    name: Update this repo's README with recent activity
+    name: Update a specific file with recent activity
 
     steps:
       - uses: actions/checkout@v2
@@ -16,5 +16,6 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          COMMIT_MSG: "Updated README with recent activity"
+          COMMIT_MSG: "Updated recentActivity"
           MAX_LINES: 5
+          FILE_NAME: "../recentActivity.md" 
