--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -8,14 +8,10 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    name: Update a specific file with recent activity
+    name: Update recent activity
 
     steps:
-      - uses: actions/checkout@v2
-      - uses: jamesgeorge007/github-activity-readme@master
+      - uses: actions/checkout@v3
+      - uses: Readme-Workflows/recent-activity@v2.4.1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          COMMIT_MSG: "Updated recentActivity"
-          MAX_LINES: 5
-          FILE_NAME: "../recentActivity.md" 
