--- a/.github/recent-activity.config.yml
+++ b/.github/recent-activity.config.yml
@@ -2,3 +2,5 @@ settings:
   max_lines: 5
   readme_file: "./recentActivity.md"
   ignored_repos:
+    -  aravindsomaraj/aravindsomaraj
+              
