--- a/.github/recent-activity.config.yml
+++ b/.github/recent-activity.config.yml
@@ -3,4 +3,6 @@ settings:
   readme_file: "./recentActivity.md"
   ignored_repos:
     -  aravindsomaraj/
+  disabled_events:
+    - "push"
               
